--- a/src/css/Quiplash.css
+++ b/src/css/Quiplash.css
@@ -177,15 +177,15 @@ body {
     gap: 10%;
     height: 100vh;
 }
-#round #promptHeader {
+#round header {
     grid-column: 1/3;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
     align-items: center;
 }
-#round #promptHeader #textoPrompt {
-    min-width: 50%;
-    max-width: 50%;
+#round header .prompt {
+    min-width: 25%;
+    max-width: 25%;
     text-align: center;
     line-height: 1.6;
     font-size: 2.6rem;
@@ -194,42 +194,49 @@ body {
     text-shadow: #574c1d 0 5px;
     user-select: text;
 }
-#round #promptHeader #tiempoPrompt {
+#round header > h2 {
+    width: 100px;
     font-size: 4rem;
     font-family: sans-serif;
     transform: skew(-15deg) rotate(-15deg);
     font-weight: bold;
     color: white;
+    text-align: center;
     text-shadow: 5px 5px gray;
 }
-#round #promptHeader div {
-    max-width: 25%;
+
+#round #promptHeader div:last-child {
+    width: 100px;
+
     display: flex;
     flex-direction: column;
-    gap: 5px;
     font-size: 2em;
     transform: skew(5deg) rotate(5deg);
-}
-#round #promptHeader div h3 {
-    margin: 0;
     font-family: sans-serif;
     text-transform: lowercase;
-    padding: 0 30px 0 30px;
-}
-#round #promptHeader div .gameCode {
+    padding: 10px 30px;
     background-color: #333232;
+    gap: 10px;
     color: white;
-    text-align: center;
-    padding: 20px;
-    margin: 0;
     box-shadow: -5px 5px black;
+    text-align: center;
 }
+
+#round #promptHeader div:last-child > h3 {
+    font-size: 0.5em;
+}
+
+#round #promptHeader div:last-child > * {
+    margin: 0;
+
+}
+
 #round #promptMessages {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
 }
-#round #promptMessages .prompts {
+#round #promptMessages .promptResponse {
     width: 500px;
     height: 300px;
     border-radius: 50px;
@@ -245,7 +252,7 @@ body {
     text-transform: uppercase;
     box-shadow: -10px -7px gray;
 }
-#round #promptMessages .prompts:nth-child(2) {
+#round #promptMessages .promptResponse:nth-child(2) {
     box-shadow: 10px -7px gray;
 }
 
