--- a/src/css/Quiplash.module.css
+++ b/src/css/Quiplash.module.css
@@ -1,32 +1,31 @@
-#lobby {
+.lobby {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     height: 100vh;
+    width: 100%;
+    background-color: turquoise;
 }
 
-body {
-    background: cadetblue;
-}
 
-#lobby > header {
+.lobby > header {
     display: flex;
     flex-direction: column;
     padding-left: 20%;
 }
-#lobby > header h1 {
+.lobby > header h1 {
     font-size: 3.4rem;
     user-select: none;
 }
-#lobby > header h2 {
+.lobby > header h2 {
     font-size: 2.5rem;
     user-select: none;
 }
-#lobby > header h3 {
+.lobby > header h3 {
     font-size: 3rem;
 }
 
-#QRcode {
-    position: absolute;
+.QRcode {
+    position: absolute !important;
     left: 10%;
     top: 60vh;
     outline: 5px solid black;
@@ -49,7 +48,7 @@ body {
     position: relative;
     box-shadow: 3px 3px black;
 }
-.icono .nombreJug {
+.icono > h4 {
     position: absolute;
     bottom: calc(0% - 65px);
     width: 100px;
@@ -72,7 +71,7 @@ body {
     aspect-ratio: 1/1;
 }
 
-#jugadores {
+.jugadores {
     transition: 500ms;
     position: relative;
     animation: infinite rotarPersonajes 30s linear;
@@ -84,10 +83,10 @@ body {
     transform-origin: 50% 50%;
     border-radius: 50%;
 }
-/*#jugadores .icono {*/
+/*.jugadores .icono {*/
 /*    opacity: 0;*/
 /*}*/
-#jugadores .palo {
+.jugadores .palo {
     width: 50px;
     height: 350px;
     transform-origin: 50% 100%;
@@ -95,60 +94,60 @@ body {
     left: 50%;
     top: 20%;
 }
-#jugadores .palo:nth-child(1) {
+.jugadores .palo:nth-child(1) {
     transform: translate(-50%, -50%) rotate(calc(45deg * 1));
 }
-#jugadores .palo:nth-child(1) .icono {
+.jugadores .palo:nth-child(1) .icono {
     rotate: calc(45deg * 1 - 90deg);
 }
-#jugadores .palo:nth-child(2) {
+.jugadores .palo:nth-child(2) {
     transform: translate(-50%, -50%) rotate(calc(45deg * 2));
 }
-#jugadores .palo:nth-child(2) .icono {
+.jugadores .palo:nth-child(2) .icono {
     rotate: 270deg;
     rotate: 270deg;
     background-color: #147714;
 }
-#jugadores .palo:nth-child(3) {
+.jugadores .palo:nth-child(3) {
     transform: translate(-50%, -50%) rotate(calc(45deg * 3));
 }
-#jugadores .palo:nth-child(3) .icono {
+.jugadores .palo:nth-child(3) .icono {
     rotate: 270deg;
     rotate: -135deg;
     background-color: #147714;
 }
-#jugadores .palo:nth-child(4) {
+.jugadores .palo:nth-child(4) {
     transform: translate(-50%, -50%) rotate(calc(45deg * 4));
 }
-#jugadores .palo:nth-child(4) .icono {
+.jugadores .palo:nth-child(4) .icono {
     rotate: calc(45deg * 4 - 360deg);
     background-color: #2323a1;
 }
-#jugadores .palo:nth-child(5) {
+.jugadores .palo:nth-child(5) {
     transform: translate(-50%, -50%) rotate(calc(45deg * 5));
 }
-#jugadores .palo:nth-child(5) .icono {
+.jugadores .palo:nth-child(5) .icono {
     rotate: calc(45deg * 5 - 90deg);
     background-color: #2323a1;
 }
-#jugadores .palo:nth-child(6) {
+.jugadores .palo:nth-child(6) {
     transform: translate(-50%, -50%) rotate(calc(45deg * 6));
 }
-#jugadores .palo:nth-child(6) .icono {
+.jugadores .palo:nth-child(6) .icono {
     rotate: calc(45deg * 6 - 180deg);
     background-color: #d2b638;
 }
-#jugadores .palo:nth-child(7) {
+.jugadores .palo:nth-child(7) {
     transform: translate(-50%, -50%) rotate(calc(45deg * 7));
 }
-#jugadores .palo:nth-child(7) .icono {
+.jugadores .palo:nth-child(7) .icono {
     rotate: calc(45deg * 7 - 270deg);
     background-color: #d2b638;
 }
-#jugadores .palo:nth-child(8) {
+.jugadores .palo:nth-child(8) {
     transform: translate(-50%, -50%) rotate(calc(45deg * 8));
 }
-#jugadores .palo:nth-child(8) .icono {
+.jugadores .palo:nth-child(8) .icono {
     rotate: calc(45deg * 8 - 360deg);
 }
 
@@ -175,20 +174,20 @@ body {
     user-select: none;
 }
 
-#round {
+.round {
     width: 100%;
     display: flex;
     flex-direction: column;
     gap: 10%;
     height: 100vh;
 }
-#round header {
+.round header {
     grid-column: 1/3;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
 }
-#round header .prompt {
+.round header .prompt {
     min-width: 25%;
     max-width: 25%;
     text-align: center;
@@ -199,7 +198,7 @@ body {
     text-shadow: #574c1d 0 5px;
     user-select: text;
 }
-#round header > h2 {
+.round header > h2 {
     width: 100px;
     font-size: 4rem;
     font-family: sans-serif;
@@ -210,7 +209,7 @@ body {
     text-shadow: 5px 5px gray;
 }
 
-#round #promptHeader div:last-child {
+.round .promptHeader div:last-child {
     width: 100px;
 
     display: flex;
@@ -227,21 +226,21 @@ body {
     text-align: center;
 }
 
-#round #promptHeader div:last-child > h3 {
+.round .promptHeader div:last-child > h3 {
     font-size: 0.5em;
 }
 
-#round #promptHeader div:last-child > * {
+.round .promptHeader div:last-child > * {
     margin: 0;
 
 }
 
-#round #promptMessages {
+.round .promptMessages {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
 }
-#round #promptMessages .promptResponse {
+.round .promptMessages .promptResponse {
     width: 500px;
     height: 300px;
     border-radius: 50px;
@@ -257,7 +256,7 @@ body {
     text-transform: uppercase;
     box-shadow: -10px -7px gray;
 }
-#round #promptMessages .promptResponse:nth-child(2) {
+.round .promptMessages .promptResponse:nth-child(2) {
     box-shadow: 10px -7px gray;
 }
 
