--- a/src/css/Quiplash.module.css
+++ b/src/css/Quiplash.module.css
@@ -27,7 +27,7 @@
 .QRcode {
     position: absolute !important;
     left: calc(150px);
-    top: calc(50% - 150px);
+    top: calc(52% - 150px);
     width: 300px;
     aspect-ratio: 1/1;
     outline: 5px solid black;
@@ -42,12 +42,17 @@
     border-radius: 5px;
     color: white;
     cursor: pointer;
-    font-size: 16px;
     padding: 10px 20px;
     margin: 10px;
     width: 100%;
     max-width: 400px;
+    font-size: 2em;
+    font-weight: bold;
+}
 
+.startButton:disabled {
+    background-color: darkgray;
+    color: #282c34;
 }
 
 .gameCode {
@@ -69,6 +74,7 @@
     position: absolute;
     bottom: calc(0% - 65px);
     width: 100px;
+    max-width: 100px;
     height: 40px;
     background: aliceblue;
     border-radius: 0 0 50% 50%;
@@ -313,4 +319,21 @@
     top: -45px;
     rotate: 25deg;
     font-size: 1em;
+}
+
+.answerScreen .jugadores {
+    position: relative;
+    width: 700px;
+    height: 300px;
+}
+
+.sombraJugadores {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    border-radius: 50%;
+    width: 100%;
+    height: 25%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 1;
 }
