--- a/src/css/Quiplash.module.css
+++ b/src/css/Quiplash.module.css
@@ -325,6 +325,19 @@
     position: relative;
     width: 700px;
     height: 300px;
+    display: flex;
+    gap: 20px;
+}
+
+.answerScreen .jugadores .listaJugadores {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    width: 100%;
+}
+.answerScreen .jugadores .listaJugadores > * {
+    width: 100px;
+    height: 100px;
 }
 
 .sombraJugadores {
