--- a/src/css/Quiplash.module.css
+++ b/src/css/Quiplash.module.css
@@ -331,7 +331,10 @@
 
 .answerScreen .jugadores .listaJugadores {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    z-index: 100;
     gap: 20px;
     width: 100%;
 }
