--- a/src/css/JokeBattle.module.css
+++ b/src/css/JokeBattle.module.css
@@ -13,13 +13,16 @@
     flex-direction: column;
     padding-left: 20%;
 }
+
 .lobby > header h1 {
     font-size: 3.4rem;
     user-select: none;
 }
+
 .lobby > header h2 {
     font-size: 2.5rem;
 }
+
 .lobby > header h3 {
     font-size: 3rem;
 }
@@ -48,6 +51,7 @@
     max-width: 400px;
     font-size: 2em;
     font-weight: bold;
+    z-index: 1000;
 }
 
 .startButton:disabled {
@@ -70,6 +74,7 @@
     position: relative;
     box-shadow: 3px 3px black;
 }
+
 .lobby .icono > h4 {
     position: absolute;
     bottom: calc(0% - 65px);
@@ -106,6 +111,7 @@
     transform-origin: 50% 50%;
     border-radius: 50%;
 }
+
 /*.jugadores .icono {*/
 /*    opacity: 0;*/
 /*}*/
@@ -117,59 +123,120 @@
     left: 50%;
     top: 20%;
 }
+
+
+@media (max-width: 767px) {
+    .lobby {
+        grid-template-columns: 1fr;
+        grid-template-rows: auto auto;
+        overflow-y: visible;
+        overflow-x: hidden;
+        max-width: 100vw;
+        height: 100vh;
+    }
+
+    .lobby > header {
+        text-align: center;
+        padding-left: 0;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .QRcode {
+        width: 50%;
+        aspect-ratio: 1/1;
+        left: calc(50% - 25%);
+        top: calc(50% - 25%);
+    }
+
+    .startButton {
+        width: calc(100% - 40px);
+    }
+
+    .lobby .jugadores {
+        width: calc(100% - 60px);
+        margin: 20px auto;
+        aspect-ratio: 1/1;
+    }
+
+    .lobby .icono > h4 {
+        bottom: -100px;
+
+        height: 70px;
+        font-size: 1.2em;
+
+    }
+
+}
+
 .lobby .jugadores .palo:nth-child(1) {
     transform: translate(-50%, -50%) rotate(calc(45deg * 1));
 }
+
 .lobby .jugadores .palo:nth-child(1) .icono {
     rotate: calc(45deg * 1 - 90deg);
 }
+
 .lobby .jugadores .palo:nth-child(2) {
     transform: translate(-50%, -50%) rotate(calc(45deg * 2));
 }
+
 .lobby .jugadores .palo:nth-child(2) .icono {
     rotate: 270deg;
     rotate: 270deg;
     background-color: #147714;
 }
+
 .lobby .jugadores .palo:nth-child(3) {
     transform: translate(-50%, -50%) rotate(calc(45deg * 3));
 }
+
 .lobby .jugadores .palo:nth-child(3) .icono {
     rotate: 270deg;
     rotate: -135deg;
     background-color: #147714;
 }
+
 .lobby .jugadores .palo:nth-child(4) {
     transform: translate(-50%, -50%) rotate(calc(45deg * 4));
 }
+
 .lobby .jugadores .palo:nth-child(4) .icono {
     rotate: calc(45deg * 4 - 360deg);
     background-color: #2323a1;
 }
+
 .lobby .jugadores .palo:nth-child(5) {
     transform: translate(-50%, -50%) rotate(calc(45deg * 5));
 }
+
 .lobby .jugadores .palo:nth-child(5) .icono {
     rotate: calc(45deg * 5 - 90deg);
     background-color: #2323a1;
 }
+
 .lobby .jugadores .palo:nth-child(6) {
     transform: translate(-50%, -50%) rotate(calc(45deg * 6));
 }
+
 .lobby .jugadores .palo:nth-child(6) .icono {
     rotate: calc(45deg * 6 - 180deg);
     background-color: #d2b638;
 }
+
 .lobby .jugadores .palo:nth-child(7) {
     transform: translate(-50%, -50%) rotate(calc(45deg * 7));
 }
+
 .lobby .jugadores .palo:nth-child(7) .icono {
     rotate: calc(45deg * 7 - 270deg);
     background-color: #d2b638;
 }
+
 .lobby .jugadores .palo:nth-child(8) {
     transform: translate(-50%, -50%) rotate(calc(45deg * 8));
 }
+
 .lobby .jugadores .palo:nth-child(8) .icono {
     rotate: calc(45deg * 8 - 360deg);
 }
@@ -179,6 +246,7 @@
         transform: rotate(360deg);
     }
 }
+
 @keyframes burbuja {
     0% {
         opacity: 0;
@@ -194,6 +262,58 @@
 }
 
 
+.intro {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10%;
+    width: 100%;
+}
+
+.intro .title {
+    font-weight: bold;
+    font-size: 4rem;
+    text-transform: uppercase;
+    margin: 0;
+    width: max-content;
+}
+
+.intro p {
+    font-size: 1.5rem;
+    margin: 0;
+}
+
+.intro .startButton {
+    background-color: #2323a1;
+}
+
+@media screen and (max-width: 767px) {
+    .intro {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        max-width: 100vw;
+        overflow-x: hidden;
+    }
+
+    .intro .title{
+        font-size: 3.5rem;
+        text-align: center;
+        width: 100%;
+        margin: 0;
+    }
+
+    .intro p{
+        font-size: 1.2rem;
+        text-align: center;
+        width: 100%;
+        padding: 10px;
+
+    }
+
+
+}
 
 .round {
     width: 100%;
@@ -202,12 +322,14 @@
     gap: 10%;
     height: 100vh;
 }
+
 .round header {
     grid-column: 1/3;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
 }
+
 .round header .prompt {
     min-width: 25%;
     max-width: 25%;
@@ -219,6 +341,7 @@
     text-shadow: #574c1d 0 5px;
     user-select: text;
 }
+
 .round header > h2 {
     width: 100px;
     font-size: 4rem;
@@ -261,6 +384,7 @@
     flex-direction: row;
     justify-content: space-evenly;
 }
+
 .round .promptMessages .promptResponse {
     width: 500px;
     height: 300px;
@@ -277,6 +401,7 @@
     text-transform: uppercase;
     box-shadow: -10px -7px gray;
 }
+
 .round .promptMessages .promptResponse:nth-child(2) {
     box-shadow: 10px -7px gray;
 }
@@ -288,6 +413,22 @@
     gap: 20px;
     margin-top: 30px;
     font-size: 1.5em;
+}
+
+.answerScreen .prompt {
+    padding: 10px;
+    backdrop-filter: brightness(80%) blur(5px);
+    border-radius: 15px;
+    color: white;
+}
+
+.answerScreen .contador {
+    font-size: 3em;
+    font-weight: bold;
+    backdrop-filter: brightness(80%) blur(5px);
+    border-radius: 50%;
+    color: white;
+    padding: 10px;
 }
 
 
@@ -349,7 +490,7 @@
     font-weight: bold;
 }
 
-.answerScreen .jugadores .listaJugadores .icono > h4{
+.answerScreen .jugadores .listaJugadores .icono > h4 {
     margin: 0;
     backdrop-filter: brightness(80%) blur(5px);
     padding: 5px;
