--- a/src/css/menuPrincipal.module.css
+++ b/src/css/menuPrincipal.module.css
@@ -1,85 +1,120 @@
 /* Estilos generales para el cuerpo y las secciones animadas */
 .body {
-  font-family: 'Arial', sans-serif;
-  background-color: #f4f4f4;
-  margin: 0;
-  overflow-x: hidden;
-  height: 100vh;
-  width: 100vw;
-  z-index: -1;
-  position: absolute;
+    font-family: 'Arial', sans-serif;
+    background-color: #f4f4f4;
+    margin: 0;
+    overflow-x: hidden;
+    height: 100vh;
+    width: 100vw;
+    z-index: -1;
+    position: absolute;
 }
 
 animated.section {
-  width: 50%;
-  position: fixed;
-  left: 0;
-  top: 0;
-  bottom: 0;
-  background-color: #fff;
-  box-shadow: 2px 0 5px rgba(0,0,0,0.2);
-  padding: 20px;
-  overflow-y: auto;
+    width: 50%;
+    position: fixed;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    background-color: #fff;
+    box-shadow: 2px 0 5px rgba(0, 0, 0, 0.2);
+    padding: 20px;
+    overflow-y: auto;
 }
 
 /* Estilos para los botones */
 .button {
-  background-color: #008CBA;
-  color: white;
-  padding: 10px 20px;
-  margin: 10px 0;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  transition: background-color 0.3s;
+    background-color: #008CBA;
+    color: white;
+    padding: 10px 20px;
+    margin: 10px 0;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s;
 }
 
 .button:hover {
-  background-color: #005f73;
+    background-color: #005f73;
 }
 
-/* Estilos para los formularios y leyendas */
+.inactiveServer {
+    background-color: #ad2424;
+    color: white;
+    width: 100%;
+    box-sizing: border-box;
+    padding: 10px;
+    border-radius: 5px;
+    border: 1px solid #3b0007;
+
+}
+
+.inactiveServer:hover {
+    background-color: #540c0c;
+}
+
 fieldset {
-  border: 2px solid #008CBA;
-  border-radius: 5px;
-  padding: 20px;
+    border: 2px solid #008CBA;
+    border-radius: 5px;
+    padding: 20px;
 }
 
 legend {
-  padding: 0 10px;
-  background-color: #008CBA;
-  color: white;
-  border-radius: 5px;
+    padding: 0 10px;
+    background-color: #008CBA;
+    color: white;
+    border-radius: 5px;
 }
 
 label {
-  display: block;
-  margin: 15px 0 5px;
+    display: block;
+    margin: 15px 0 5px;
 }
 
 input[type="text"],
 select {
-width: 100%;
-  padding: 10px;
-  margin-bottom: 10px;
-  border: 1px solid #ddd;
-  border-radius: 5px;
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 10px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
 }
 
-input[type="text"]{
+input[type="text"] {
     width: calc(100% - 22px);
 }
 
-input[type="submit"] {
-  width: 100%;
-  box-sizing: border-box;
-  padding: 10px;
-  border-radius: 5px;
-  border: 1px solid #008CBA;
-  background-color: #008CBA;
-  color: white;
+.activeServer {
+    width: 100%;
+    box-sizing: border-box;
+    padding: 10px;
+    border-radius: 5px;
+    border: 1px solid #008CBA;
+    background-color: #008CBA;
+    color: white;
 }
 
-input[type="submit"]:hover {
-  background-color: #005f73;
+.activeServer:hover {
+    background-color: #005f73;
+}
+
+.header{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    text-transform: uppercase;
+    font-size: 2rem;
+    padding: 5px;
+    background-color: greenyellow;
+}
+
+@media (max-width: 767px) {
+    .main {
+        display: flex;
+        justify-content: center;
+    }
+
+    *{
+        font-size: 1.1em;
+    }
 }
