--- a/src/css/JokeBattle.module.css
+++ b/src/css/JokeBattle.module.css
@@ -656,3 +656,55 @@
 
     }
 }
+
+.endScreen {
+    text-align: center;
+    background-color: #0f181e;
+    margin: 0;
+    height: 100vh;
+    color: white;
+    overflow: hidden;
+}
+
+.endScreen h1 {
+    font-size: 2.5em;
+}
+
+.endScreen h2 {
+    font-size: 1.9em;
+}
+
+.endScreen .buttonList {
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 30px;
+}
+
+.endScreen .buttonList > button {
+    width: 300px;
+    padding: 20px;
+    font-size: 1.5em;
+    border-radius: 10px;
+    border: 4px solid transparent;
+    background-color: #4ea16c;
+    color: white;
+    cursor: pointer;
+    font-weight: bold;
+}
+
+.endScreen .buttonList > button:hover {
+    border: 4px solid #051c0f;
+    background-color: #0b6731;
+}
+
+.endScreen .buttonList > button:active {
+
+    border: 4px solid #000000;
+    background-color: #031f0e;
+
+}
+
+.endScreen .winnerModel {
+    max-height: 50%;
+    aspect-ratio: 1/1;
+}
