--- a/src/css/JokeBattle.module.css
+++ b/src/css/JokeBattle.module.css
@@ -421,6 +421,23 @@
     padding: 30px;
     text-transform: uppercase;
     box-shadow: -10px -7px gray;
+    position: relative;
+}
+
+.promptResponse > .responseOwner {
+    font-size: 0.5em;
+    position: absolute;
+    bottom: -5px;
+    padding: 5px;
+    left: 25%;
+}
+
+.promptResponse > .responseText {
+    font-weight: normal;
+}
+
+.promptResponse > .responseTextBold {
+    font-weight: bold;
 }
 
 .round .promptMessages .promptResponse:nth-child(2) {
