--- a/src/css/JokeBattle.module.css
+++ b/src/css/JokeBattle.module.css
@@ -125,50 +125,6 @@
 }
 
 
-@media (max-width: 767px) {
-    .lobby {
-        grid-template-columns: 1fr;
-        grid-template-rows: auto auto;
-        overflow-y: visible;
-        overflow-x: hidden;
-        max-width: 100vw;
-        height: 100vh;
-    }
-
-    .lobby > header {
-        text-align: center;
-        padding-left: 0;
-        justify-content: center;
-        align-items: center;
-    }
-
-    .QRcode {
-        width: 50%;
-        aspect-ratio: 1/1;
-        left: calc(50% - 25%);
-        top: calc(50% - 25%);
-    }
-
-    .startButton {
-        width: calc(100% - 40px);
-    }
-
-    .lobby .jugadores {
-        width: calc(100% - 60px);
-        margin: 20px auto;
-        aspect-ratio: 1/1;
-    }
-
-    .lobby .icono > h4 {
-        bottom: -100px;
-
-        height: 70px;
-        font-size: 1.2em;
-
-    }
-
-}
-
 .lobby .jugadores .palo:nth-child(1) {
     transform: translate(-50%, -50%) rotate(calc(45deg * 1));
 }
@@ -290,32 +246,6 @@
     background-color: #2323a1;
 }
 
-@media screen and (max-width: 767px) {
-    .introScreen {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        max-width: 100vw;
-        overflow-x: hidden;
-    }
-
-    .introScreen .title {
-        font-size: 3.5rem;
-        text-align: center;
-        width: 100%;
-        margin: 0;
-    }
-
-    .introScreen p {
-        font-size: 1.2rem;
-        text-align: center;
-        width: 100%;
-        padding: 10px;
-
-    }
-
-
-}
 
 .round {
     position: relative;
@@ -447,34 +377,6 @@
     overflow-wrap: break-word;
 }
 
-@media screen and (max-width: 767px) {
-    .round .promptMessages {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        gap: 30px;
-    }
-
-
-    .round .promptMessages .promptResponse {
-        width: 300px;
-        height: 200px;
-    }
-
-    .promptResponse > .responseText {
-        font-weight: normal;
-        max-width: 100%;
-        word-wrap: break-word;
-        overflow-wrap: break-word;
-        font-size: 0.4em;
-    }
-
-    .promptHeader .gameCode {
-        display: none;
-    }
-}
-
 .round .promptMessages .promptResponse:nth-child(2) {
     box-shadow: 10px -7px gray;
 }
@@ -497,7 +399,7 @@
     user-select: none;
     padding: 10px;
     margin: 0;
-    position: absolute;
+    /*position: absolute;*/
     left: 5%;
     top: 5%;
 }
@@ -593,30 +495,6 @@
     width: 100%;
 }
 
-
-@media screen and (max-width: 767px) {
-    .answerScreen {
-
-        margin-top: 150px;
-    }
-
-    .answerScreen .safetySendButton {
-        font-size: 1em;
-    }
-
-    .answerScreen .contador {
-        top: 0;
-        position: absolute;
-        right: 0;
-        font-weight: bold;
-        backdrop-filter: brightness(80%) blur(5px);
-        border-radius: 15px;
-        color: white;
-        padding: 10px;
-        margin: 0;
-    }
-
-}
 
 .answerScreen .jugadores .listaJugadores .icono {
     text-align: center;
@@ -801,4 +679,126 @@
 .endScreen .winnerModel {
     max-height: 50%;
     aspect-ratio: 1/1;
+}
+
+@media screen and (max-width: 1000px) and (orientation: portrait) {
+    .introScreen {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        max-width: 100vw;
+        overflow-x: hidden;
+    }
+
+    .introScreen .title {
+        font-size: 3.5rem;
+        text-align: center;
+        width: 100%;
+        margin: 0;
+    }
+
+    .introScreen p {
+        font-size: 1.2rem;
+        text-align: center;
+        width: 100%;
+        padding: 10px;
+
+    }
+
+    .introScreen .startButton {
+        margin: 0 30px;
+    }
+
+    .QRcode{
+        display: none;
+    }
+
+    .lobby {
+        font-size: 0.6em;
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        max-width: 100vw;
+        overflow: hidden;
+    }
+
+    .lobby > header > h1, .lobby > header > h2 {
+        margin: 0;
+    }
+
+    .lobby .jugadores .palo{
+        /*width: 50px;*/
+        height: 200px;
+        /*transform-origin: 50% 100%;*/
+        /*position: absolute;*/
+        /*left: 50%;*/
+        /*top: 20%;*/
+    }
+
+    .lobby .jugadores {
+        width: calc(100% - 70px);
+        margin: 20px auto;
+        aspect-ratio: 1/1;
+    }
+
+    .lobby header  {
+        padding: 20px;
+        gap: 10px;
+    }
+
+
+    .lobby .icono > h4 {
+        bottom: -40px;
+        border-radius: 0 0 10px 10px;
+        font-size: 0.8em;
+
+    }
+
+    .round .promptMessages {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 30px;
+    }
+
+
+    .round .promptMessages .promptResponse {
+        width: 300px;
+        height: 200px;
+    }
+
+    .promptResponse > .responseText {
+        font-weight: normal;
+        max-width: 100%;
+        word-wrap: break-word;
+        overflow-wrap: break-word;
+        font-size: 0.4em;
+    }
+
+    .promptHeader > div:last-child {
+        display: none;
+    }
+
+    .answerScreen {
+        overflow: hidden;
+    }
+
+    .answerScreen .safetySendButton {
+        font-size: 1em;
+    }
+
+    .answerScreen .rondaActual{
+        display: block;
+        position: relative;
+        font-size: 0.5em;
+
+    }
+
+    .answerScreen .contador {
+        position: relative;
+        display: block;
+        font-size: 0.5em;
+    }
+
 }
