--- a/src/css/unirseJuego.module.css
+++ b/src/css/unirseJuego.module.css
@@ -22,7 +22,6 @@
 
 .container {
     width: 50%;
-    height: 25%;
     text-align: center;
     display: flex;
     flex-direction: column;
@@ -60,4 +59,11 @@
     background-color: #282c34;
     color: #fffcfc;
     cursor: pointer;
+}
+
+@media (max-width: 1000px) and (orientation: portrait) {
+    .container {
+        width: 75%;
+    }
+
 }
