--- a/src/css/JokeBattle.module.css
+++ b/src/css/JokeBattle.module.css
@@ -274,14 +274,14 @@
     }
 }
 
-.round header {
+.round .promptHeader {
     grid-column: 1/3;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
 }
 
-.round header .prompt {
+.round .promptHeader .prompt {
     min-width: 25%;
     max-width: 25%;
     text-align: center;
@@ -293,7 +293,7 @@
     user-select: text;
 }
 
-.round header > h2 {
+.round .promptHeader > .contador {
     width: 100px;
     font-size: 4rem;
     font-family: sans-serif;
@@ -399,6 +399,8 @@
     user-select: none;
     padding: 10px;
     margin: 0;
+    display: flex;
+    align-items: center;
     /*position: absolute;*/
     left: 5%;
     top: 5%;
@@ -760,6 +762,26 @@
         align-items: center;
         justify-content: center;
         gap: 30px;
+    }
+
+    .round .promptHeader > div:last-child{
+        display: none;
+    }
+
+    .round .promptHeader{
+        flex-direction: column;
+    }
+
+    .round .promptHeader .prompt {
+        width: 100%;
+        max-width: 75%;
+
+        font-size: 0.9em;
+        text-wrap: normal;
+    }
+
+    .round .contador{
+        margin: 0;
     }
 
 
