--- a/src/css/JokeBattle.module.css
+++ b/src/css/JokeBattle.module.css
@@ -611,6 +611,11 @@
     overflow: hidden;
 }
 
+.scoreScreen .startButton{
+    background-color: #8455fc;
+    font-size: 1em;
+}
+
 @keyframes brillo {
     0% {
         opacity: 1;
@@ -791,10 +796,13 @@
     }
 
     .promptResponse > .responseText {
-        font-weight: normal;
         max-width: 100%;
         word-wrap: break-word;
         overflow-wrap: break-word;
+        font-size: 0.4em;
+    }
+
+    .responseTextBold{
         font-size: 0.4em;
     }
 
@@ -831,6 +839,8 @@
         max-width: 70%;
         flex-flow: column wrap;
         gap: 20px;
+        max-height: 500px;
+        overflow-y: auto;
 
     }
 
